# CharaDo

./: LICENSE  mkdocs.yml  備忘録.md
.github/workflows/: CICD.yml
CharaDo/: .gitignore  eslint.config.js  index.html  jest.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
CharaDo/ci/: pre-commit  pre-push  setup-hooks.ps1
CharaDo/src/: App.css  App.tsx  check.test.ts  test.tsx  testComponent.tsx
CharaDo/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
CharaDo/src-tauri/bindings/: character.ts  store.ts  task.ts  user.ts  user_error.ts
CharaDo/src-tauri/icons/: icon.icns
CharaDo/src-tauri/src/: command.rs  config.rs  datas.rs  entities.rs  error.rs  lib.rs  main.rs  protocols.rs  repository.rs  services.rs  state.rs  test.rs
CharaDo/src-tauri/src/command/: character.rs  store.rs  task.rs  task_command.rs  user.rs
CharaDo/src-tauri/src/datas/: preset_characters.rs  preset_setting.rs
CharaDo/src-tauri/src/entities/: character.rs  record.rs  store.rs  task.rs  user.rs
CharaDo/src-tauri/src/protocols/: assets.rs
CharaDo/src-tauri/src/repository/: json_repository.rs  store.rs  task_repo.rs
CharaDo/src-tauri/src/services/: character_service.rs  record_service.rs  store_service.rs  task_service.rs  user_service.rs
docs/: index.md
docs/00_requirement/: 00_functions.md  10_extensibility.md
docs/10_design/: 00_index.md  10_task.md  20_task_edit.md  30_data.md  40_character.md  50_character_edit.md  60_plan.md
docs/stylesheets/: extra.css
min-app/: collect-versions.ps1  package-lock.json  package.json  project-versions.txt
(+48 files in other folders)
