[package]
name = "charado"
version = "0.1.0"
description = "A ToDo with cute character app"
authors = ["CFEEL"]
edition = "2021"
license = "MIT"
repository = "https://github.com/CharaDo-Official/CharaDo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "charado_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# date
chrono = { version = "0.4", features = ["serde"] }
# Error
thiserror = "1.0"
# logger
log = "0.4"
tauri-plugin-log = "2"
# AppLocalData
dirs-next = "2"
# TS type
ts-rs = "10"
# WinRT
windows = { version = "0.61.3", features = [
  "Services_Store",
  "Foundation",
  "Win32_System_Com"
] }
windows-future = "0.2.1"
windows-collections = "0.2.0"
futures = "0.3"
